Fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,6 +57,23 @@ a:hover {
     color: rgb(225, 65, 175);
 }
 
+.title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex: 1.5;
+}
+
+.credits {
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    flex: 1;
+}
+
+
+
+
 
 img {
     height: 12px;
